--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/eigen-3.4.0)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tinyxml2)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/orocos_kdl/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rbdl-3.3.1/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tinyurdf)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tinyurdf/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gtest/include)
