--- a/rbdl-3.3.1/tutorial/CMakeLists.txt
+++ b/rbdl-3.3.1/tutorial/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(tutorial_rbdl_ur5 tutorial_rbdl_ur5.cpp)
-target_link_libraries(tutorial_rbdl_ur5 rbdl)
+target_link_libraries(tutorial_rbdl_ur5 rbdl-static)
