--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(URDF)
+project(Scene)
 set(CMAKE_CXX_STANDARD 20)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/eigen-3.4.0)
@@ -17,17 +17,18 @@ add_subdirectory(lua)
 add_subdirectory(orocos_kdl)
 add_subdirectory(rbdl-3.3.1)
 #add_subdirectory(rbdl-3.3.1/addons/urdfreader)
-add_subdirectory(rbdl-3.3.1/tutorial)
+#add_subdirectory(rbdl-3.3.1/tutorial)
 add_subdirectory(tinyxml2)
 add_subdirectory(tinyurdf)
 #add_subdirectory(rdl-master/rdl_dynamics)
 add_subdirectory(yaml-cpp)
-add_subdirectory(sackmesser)
-add_subdirectory(orwell)
-add_subdirectory(gafro)
-add_subdirectory(SpaceVecAlg)
-add_subdirectory(RBDyn)
-add_subdirectory(qpOASES)
+#add_subdirectory(sackmesser)
+#add_subdirectory(orwell)
+#add_subdirectory(gafro)
+add_subdirectory(spacevecalg)
+add_subdirectory(rbdyn)
+add_subdirectory(qpoases)
+add_subdirectory(scene)
 #add_subdirectory(wbc)
 
 add_executable(main main.cpp)
