--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,22 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/tinyurdf/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gtest/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lua/src)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/rdl-master/rdl_dynamics/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gafro/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/scene)
+
+function(AddTutorials Path)
+    file(GLOB examples ${Path}/*.cpp)
+    foreach (example ${examples})
+        message(STATUS "File Path: ${example}")
+        string(REGEX MATCHALL "[0-9A-Za-z_]*.cpp" file_name ${example})
+        string(REGEX REPLACE ".cpp" "" file_base ${file_name})
+        message(${file_base})
+        #${ARGC}
+        #${ARGV} ${ARGV0} ${ARGV1} ${ARGV2}
+        #get_filename_component(file_base ${example} NAME_WE)
+        add_executable(${file_base} ${example})
+        target_link_libraries(${file_base} ${ARGN})
+    endforeach ()
+endfunction()
 
 add_subdirectory(lua)
 add_subdirectory(orocos_kdl)
