--- a/scene/CMakeLists.txt
+++ b/scene/CMakeLists.txt
@@ -1,1 +1,4 @@
-add_library(scene  SceneModel.cpp XmlReader.cpp UrdfReader.cpp MeshFileIO.cpp)
+add_library(trajectory Trajectory.cpp Path.cpp)
+add_library(scene SceneModel.cpp XmlReader.cpp UrdfReader.cpp MeshFileIO.cpp)
+
+AddTutorials(tutorial trajectory)
